--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_CLIENT =
-SECRET =
-NEXT_PUBLIC_API =
+NEXT_PUBLIC_CLIENT =SB-Mid-client-Dn3mKLu8-pDlpzVO
+SECRET =SB-Mid-server-Vjbp1esrO7VyPs1Xw0HQa69F
+NEXT_PUBLIC_API =https://app.sandbox.midtrans.com/snap/v1/transactions
